corpus/plg.txt
============================================
values
============================================

" "
"foo"
"(bar)"
"baz{"

---

(data (value) (value) (value) (value))


============================================
empty values
============================================

""

---

(data (value))


============================================
values with escaped quotes
============================================

" "" "
""""
"""a"
"b"""

---

(data (value) (value) (value) (value))


============================================
functions
============================================

"(){;}"

"(arg) {
	return true;
}"

"({return 'function with wrong syntax';}"

---

(data (function) (function) (function))

============================================
functions with escaped quotes
============================================

"(){
	Trace('""hi""');
}"

---

(data (function))
